# ProjectTemplateCpp

./: .gitignore  Build.bat  Build.sh  README.md
sources/: .clang-format  CMakeLists.txt  Main.cpp  Main.lua
sources/extension/: console.cpp  console.hpp  dLog.cpp  dLog.hpp  init.hpp  profiler.cpp  profiler.hpp  style.cpp  style.hpp
sources/libraries/selene/: ExceptionHandler.h  LuaRef.h  MetatableRegistry.h  primitives.h  util.h
